--- a/Realtime_Feedback_Sentiment_Analysis.ipynb
+++ b/Realtime_Feedback_Sentiment_Analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "Realtime Feedback Sentiment Analysis",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMoAbK84NQ3uQ9tNUmaAVpA",
+      "authorship_tag": "ABX9TyP8KKWM/eW8qn+y6fIa1yzy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,15 +40,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Wo19exOiqQrq",
-        "outputId": "002d76cf-dd0c-4897-d0b9-435ad56831a3"
+        "outputId": "f7718040-2b2e-407d-ffdc-3a50495ebae9"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[nltk_data] Downloading package vader_lexicon to /root/nltk_data...\n"
+            "[nltk_data] Downloading package vader_lexicon to /root/nltk_data...\n",
+            "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
           ]
         },
         {
@@ -59,7 +60,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 25
         }
       ]
     },
@@ -86,19 +87,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w9jpJQgoo_0C",
-        "outputId": "88b12885-2873-429a-93dc-22313a6d6a88"
+        "outputId": "3ad43756-585a-4b35-a3e4-182fe9590f25"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Please share your feedback: Do not expect too much\n",
-            "Your feedback was neutral :|\n"
+            "Please share your feedback: The product was amazing!\n",
+            "Your feedback was positive :D\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Ntnaom1vxE6s"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
