--- a/Realtime_Feedback_Sentiment_Analysis.ipynb
+++ b/Realtime_Feedback_Sentiment_Analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "Realtime Feedback Sentiment Analysis",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP8KKWM/eW8qn+y6fIa1yzy",
+      "authorship_tag": "ABX9TyMgp2IAs+R4p9hTgelIuauI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Importing libraries"
+      ],
+      "metadata": {
+        "id": "Jgl22O27m2ea"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import nltk\n",
@@ -42,7 +51,7 @@
         "id": "Wo19exOiqQrq",
         "outputId": "f7718040-2b2e-407d-ffdc-3a50495ebae9"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -63,6 +72,15 @@
           "execution_count": 25
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Taking user feedback to understand their impression "
+      ],
+      "metadata": {
+        "id": "N8EWrKv3m6rK"
+      }
     },
     {
       "cell_type": "code",
@@ -89,7 +107,7 @@
         "id": "w9jpJQgoo_0C",
         "outputId": "3ad43756-585a-4b35-a3e4-182fe9590f25"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
